--- a/Session 02/projects/Bamberger Braggi/styles.css
+++ b/Session 02/projects/Bamberger Braggi/styles.css
@@ -8,21 +8,34 @@
 
   * Para colores guiarse del archivo style-guide.css
 */
-body{background: lightgray;}
+body
 * {
+  /* background: lightgray; */
   font-family: 'Karla', sans-serif;
-
-}
-section{
   
-  background-color: #ffffff;
+}
+section0{
+  float: left;
+  background-color: #f5f5f5;
   margin-left: 10%;
   margin-right: 10%;
   border-radius: 10px 10px 0px 0px;
   
   text-align: center;
 }
+
 section1{
+  background-color: #39cfcd;
+  float: left;
+  width: 40%;
+  margin-left: 10%;
+  height: 7cm;
+  
+  text-align: center;
+  border-radius: 0px 0px 0px 10px;
+  color: white;
+}
+section2{
   background-color:  #46f8f5;
   float: left;
   width: 40%;
@@ -30,25 +43,20 @@ section1{
   
   border-radius: 0px 0px 10px 0px;
   color: white;
-
+  height: 7cm;
 }
-section2{
-  background-color: #39cfcd;
+margen1{
   float: left;
-  width: 40%;
+  /* height: 80%; */
+  margin-right: 10%;
   margin-left: 10%;
-  
-  text-align: center;
-  border-radius: 0px 0px 0px 10px;
-  color: white;
-}
-button{
- 
+  margin-top: 10%;
+  margin-bottom: 10%;
 }
 
 
 
-
+/* 
 aside{
   float: left;
-}
+} */
