--- a/Session 02/projects/Gustavo Piminchumo/styles.css
+++ b/Session 02/projects/Gustavo Piminchumo/styles.css
@@ -1,67 +1,64 @@
 :root{
-    --color1:#c0df34;
-    --color2: white;
+    --color-primary: white;
+    --color-Cyan: #2ab2af;
+    --color-BrightYellow:#c0df34;
+    --color-LightGray:#e5eff5;
+    --color-BajoCyan: #57ccca;
 }
 body{
-    background-color: #e5eff5;
+    background-color: var(--color-LightGray);
     font-family: 'Karla', sans-serif; 
 }
 article{
     width: 50%;
     border-radius: 1em;
-   background: var(--color2) ; 
     margin: auto;   
-    margin-top: 5%;  
+    margin-top: 5%; 
+    overflow: hidden;
 }
 /* PARTE SUPERIOR*/
 .superior{
-    background: var(--color2) ;
-     padding: 1em 3em;
-     border-top-left-radius: 1em;
-     border-top-right-radius: 1em;     
+    background: var(--color-primary) ;
+    padding: 1em 3em;     
 }
 .superior h3{
-    color: #2ab2af;
-    font-size: 150%;
+    color:var(--color-Cyan);
+    font-size: 1.7em;
 }
 .superior h4{
-    color: var(--color1);
-    font-size: 120%;
+    color: var(--color-BrightYellow);
 }
 .superior p{
     color: #98a6bd;
-    font-size: 115%;
+    font-size:1.2em;
     line-height: 1.8;
 }
 /*PARTE INFERIOR*/
+.pinferior{
+    background-color:var(--color-BajoCyan) ;
+}
 .inferior{
     width: 40%;
-    display: inline-block;
+    display: inline-table;
 }
 /*PARTE INFERIOR IZQUIERDA*/
 .izquierda{
-    background-color:  #2ab2af;
-    color:#e5eff5;
-    padding: 1.8em  1em 2em 4em;
-    border-bottom-left-radius: 1em;    
-}
-.izquierda h4{
-    font-size: 120%;
+    background-color: var(--color-Cyan);
+    color: var(--color-primary);
+    padding: 1.3em  1em 3em 4em;
 }
 .precio strong
 {
     font-size: 2em;
 }
 .precio span{
-    color:#57ccca ;
+    color:var(--color-BajoCyan) ;
 }
 .izquierda button{
     border: none;
     font-size: 1em;
-    /* background-color: #c0df34; */
-    background: var(--color1);
-    color:#e5eff5;
-    border-radius: 5px;
+    background: var(--color-BrightYellow);
+    border-radius: 0.3em;
     padding: 1em 2em;
     width: 80%;
     margin-top: 1em; 
@@ -69,17 +66,20 @@ article{
 }
 /*PARTE INFERIOR DERECHA*/
 .derecha{
-    background-color:#57ccca ;
-    color:#e5eff5;
-    padding: 1.3em  2.3em 1.9em 2em;
-    border-bottom-right-radius: 1em;
+    background-color:var(--color-BajoCyan) ;
+    padding: 1.2em  2.4em 2.5em 2em;
     line-height: 1.3;
-  
 }
 .derecha h4{
     padding-left: 2em;
-    font-size: 120%;
+    color: var(--color-primary);
 }
 .derecha li{
     list-style-type: none;
+}
+.superior h4, .derecha h4, .izquierda h4{
+    font-size: 1.3em;
+}
+.izquierda button, .derecha{
+    color:var(--color-LightGray);
 }
